使用 Colab 创建而成

--- a/dataPreprocessing.ipynb
+++ b/dataPreprocessing.ipynb
@@ -21,10 +21,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NvJBelYjXwt7",
-        "outputId": "d86011b4-dadb-414a-89ed-7b693cf0923e"
+        "outputId": "478d47c1-384f-4f7f-b74d-5c54555ad69a"
       },
       "id": "NvJBelYjXwt7",
-      "execution_count": 4,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -37,26 +37,8 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
-      "id": "c7a65502",
-      "metadata": {
-        "id": "c7a65502",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "25358c55-a63c-4b65-bd8d-8e66908b8e71"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Overwriting /content/drive/MyDrive/preprocessing.py\n"
-          ]
-        }
-      ],
       "source": [
-        "%%writefile /content/drive/MyDrive/preprocessing.py\n",
+        "\n",
         "import torch\n",
         "import torchvision\n",
         "import torchvision.transforms as transforms\n",
@@ -175,36 +157,38 @@
         "                dict_users[i] = np.concatenate((dict_users[i], idx_shard[shard_idx]), axis=0)\n",
         "\n",
         "        return dict_users\n",
+        "\n",
+        "\n",
         "\n"
-      ]
+      ],
+      "metadata": {
+        "id": "-wx0VcRwZw00"
+      },
+      "execution_count": null,
+      "outputs": [],
+      "id": "-wx0VcRwZw00"
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
-      "id": "TNKNYMJVM8yM",
+      "execution_count": 8,
+      "id": "c7a65502",
       "metadata": {
+        "id": "c7a65502",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 215
+          "base_uri": "https://localhost:8080/"
         },
-        "id": "TNKNYMJVM8yM",
-        "outputId": "b9ecce9b-7d7f-4304-f9cb-511f5518e96e"
+        "outputId": "f2009ad8-0b94-444d-c262-11f863ecd6d6"
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'FederatedDataBuilder' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-1578188342.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;31m# 1. Initialize Builder\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;31m# Note: First run will download CIFAR-100 to ./data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mbuilder\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFederatedDataBuilder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval_split_ratio\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mK\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;31m# 2. Get I.I.D. partition\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'FederatedDataBuilder' is not defined"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting /content/drive/MyDrive/preprocessing.py\n"
           ]
         }
       ],
       "source": [
-        "\n",
         "if __name__ == \"__main__\":\n",
         "    # 1. Initialize Builder\n",
         "    # Note: First run will download CIFAR-100 to ./data\n",
@@ -228,6 +212,140 @@
         "    print(f\"Client 0 has labels: {unique_labels}\")\n",
         "    print(f\"Number of unique classes for Client 0: {len(unique_labels)}\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile /content/drive/MyDrive/preprocessing.py\n",
+        "\n",
+        "import torch\n",
+        "import torchvision\n",
+        "import torchvision.transforms as transforms\n",
+        "import numpy as np\n",
+        "from torch.utils.data import Subset, random_split\n",
+        "\n",
+        "class FederatedDataBuilder:\n",
+        "    def __init__(self, root='./data', val_split_ratio=0.1, K=100):\n",
+        "        \"\"\"\n",
+        "        Initialize the data builder.\n",
+        "        :param root: Directory to download/store the dataset.\n",
+        "        :param val_split_ratio: Ratio of the validation set size to the training set size.\n",
+        "        :param K: Total number of clients (Source 59, 62 typically sets K=100).\n",
+        "        \"\"\"\n",
+        "        self.root = root\n",
+        "        self.K = K\n",
+        "        self.val_split_ratio = val_split_ratio\n",
+        "\n",
+        "        # 1. Data Preprocessing\n",
+        "        # Note: DINO ViT might require specific transforms (e.g., resize to 224x224) depending on memory.\n",
+        "        # Using standard CIFAR transforms here as a baseline.\n",
+        "        self.transform = transforms.Compose([\n",
+        "            transforms.ToTensor(),\n",
+        "            transforms.Normalize((0.5071, 0.4867, 0.4408), (0.2675, 0.2565, 0.2761))\n",
+        "        ])\n",
+        "\n",
+        "        # 2. Load original CIFAR-100 training set\n",
+        "        # The project requires CIFAR-100.\n",
+        "        full_train_dataset = torchvision.datasets.CIFAR100(\n",
+        "            root=self.root, train=True, download=True, transform=self.transform\n",
+        "        )\n",
+        "        self.test_dataset = torchvision.datasets.CIFAR100(\n",
+        "            root=self.root, train=False, download=True, transform=self.transform\n",
+        "        )\n",
+        "\n",
+        "        # 3. Create Validation Split\n",
+        "        # CIFAR-100 does not have a validation split, so we must create one.\n",
+        "        val_size = int(len(full_train_dataset) * val_split_ratio) #val_size=5000\n",
+        "        train_size = len(full_train_dataset) - val_size  #train_size=45000\n",
+        "\n",
+        "        # This 'train_dataset' will be used for subsequent FL client partitioning.\n",
+        "        # A fixed seed is used for reproducibility.\n",
+        "        self.train_dataset, self.val_dataset = random_split(\n",
+        "            full_train_dataset, [train_size, val_size],\n",
+        "            generator=torch.Generator().manual_seed(42)\n",
+        "        )\n",
+        "\n",
+        "        # Extract targets/labels for the training subset to handle Non-IID logic.\n",
+        "        # Note: We need to map the subset indices back to the original dataset targets.\n",
+        "        self.train_indices = self.train_dataset.indices\n",
+        "        self.train_targets = np.array(full_train_dataset.targets)[self.train_indices]\n",
+        "\n",
+        "    def get_iid_partition(self):\n",
+        "        \"\"\"\n",
+        "        I.I.D. Sharding: Each client is given an approximately equal number of training\n",
+        "        samples uniformly distributed over the class labels .\n",
+        "        \"\"\"\n",
+        "        print(f\"Generating I.I.D. partition for {self.K} clients...\")\n",
+        "        num_items = int(len(self.train_dataset) / self.K)\n",
+        "        dict_users, all_idxs = {}, [i for i in range(len(self.train_dataset))]\n",
+        "\n",
+        "        # Randomly shuffle all indices to ensure uniform distribution\n",
+        "        np.random.shuffle(all_idxs)\n",
+        "\n",
+        "        for i in range(self.K):\n",
+        "            # Assign a slice of indices to each client\n",
+        "            dict_users[i] = set(all_idxs[i * num_items : (i + 1) * num_items])\n",
+        "\n",
+        "        return dict_users\n",
+        "\n",
+        "    def get_non_iid_partition(self, Nc):\n",
+        "        \"\"\"\n",
+        "        Non-I.I.D. Sharding: Each client is given an approximately equal number of training\n",
+        "        samples, belonging to Nc classes .\n",
+        "\n",
+        "        :param Nc: The number of classes per client (Controls heterogeneity).\n",
+        "        \"\"\"\n",
+        "        print(f\"Generating Non-I.I.D. partition for {self.K} clients with Nc={Nc}...\")\n",
+        "\n",
+        "        # 1. Sort indices by label to group classes together\n",
+        "        idxs = np.arange(len(self.train_dataset))\n",
+        "        labels = self.train_targets\n",
+        "\n",
+        "        # Stack indices and labels, then sort by labels\n",
+        "        idxs_labels = np.vstack((idxs, labels))\n",
+        "        idxs_labels = idxs_labels[:, idxs_labels[1, :].argsort()]\n",
+        "        idxs = idxs_labels[0, :] # Sorted indices\n",
+        "        labels = idxs_labels[1, :] # Sorted labels\n",
+        "\n",
+        "        # 2. Create Shards\n",
+        "        # To ensure each client gets exactly Nc classes (approximately), we divide the\n",
+        "        # sorted dataset into K * Nc shards.\n",
+        "        total_shards = self.K * Nc\n",
+        "        shard_size = int(len(self.train_dataset) / total_shards)\n",
+        "\n",
+        "        # Split the sorted indices into shards\n",
+        "        idx_shard = [idxs[i*shard_size : (i+1)*shard_size] for i in range(total_shards)]\n",
+        "\n",
+        "        # 3. Assign Shards to Clients\n",
+        "        # Clients must have disjoint sets of training samples.\n",
+        "        dict_users = {i: np.array([], dtype='int64') for i in range(self.K)}\n",
+        "        available_shards = list(range(total_shards))\n",
+        "\n",
+        "        for i in range(self.K):\n",
+        "            # Assign Nc shards to each client\n",
+        "            shards_to_assign = []\n",
+        "            for _ in range(Nc):\n",
+        "                # Randomly select a shard and remove it from the pool (no replacement)\n",
+        "                # to ensure the data subsets are disjoint.\n",
+        "                shard_idx = np.random.choice(available_shards)\n",
+        "                shards_to_assign.append(shard_idx)\n",
+        "                available_shards.remove(shard_idx)\n",
+        "\n",
+        "            # Concatenate the selected shards for this client\n",
+        "            for shard_idx in shards_to_assign:\n",
+        "                dict_users[i] = np.concatenate((dict_users[i], idx_shard[shard_idx]), axis=0)\n",
+        "\n",
+        "        return dict_users\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "i5Y0INkGZVHA"
+      },
+      "id": "i5Y0INkGZVHA",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
