update zoom in the image

--- a/dataPreprocessing.ipynb
+++ b/dataPreprocessing.ipynb
@@ -24,7 +24,7 @@
         "outputId": "478d47c1-384f-4f7f-b74d-5c54555ad69a"
       },
       "id": "NvJBelYjXwt7",
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -61,6 +61,7 @@
         "        # Note: DINO ViT might require specific transforms (e.g., resize to 224x224) depending on memory.\n",
         "        # Using standard CIFAR transforms here as a baseline.\n",
         "        self.transform = transforms.Compose([\n",
+        "            transforms.Resize((224, 224)),  # We resized the CIFAR-100 images from 32x32 to 224x224.\n",
         "            transforms.ToTensor(),\n",
         "            transforms.Normalize((0.5071, 0.4867, 0.4408), (0.2675, 0.2565, 0.2761))\n",
         "        ])\n",
@@ -170,7 +171,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "c7a65502",
       "metadata": {
         "id": "c7a65502",
@@ -240,6 +241,7 @@
         "        # Note: DINO ViT might require specific transforms (e.g., resize to 224x224) depending on memory.\n",
         "        # Using standard CIFAR transforms here as a baseline.\n",
         "        self.transform = transforms.Compose([\n",
+        "            transforms.REsize((224,224))#We resized the CIFAR-100 images from 32x32 to 224x224.\n",
         "            transforms.ToTensor(),\n",
         "            transforms.Normalize((0.5071, 0.4867, 0.4408), (0.2675, 0.2565, 0.2761))\n",
         "        ])\n",
