update centralized model

--- a/centralizedModel.ipynb
+++ b/centralizedModel.ipynb
@@ -2,10 +2,9 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "id": "6c079e59",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/ILoveCoder999/FederatedLearning/blob/master/centralizedModel.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -13,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "825e3347",
       "metadata": {
         "colab": {
@@ -47,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "0f172bdc",
       "metadata": {
         "id": "0f172bdc",
@@ -157,7 +156,7 @@
         "def run_centralized_baseline():\n",
         "    # Centralized baseline\n",
         "    # Search for best hyperparameters\n",
-        "    BATCH_SIZE = 64         # Adjust based on Colab GPU memory\n",
+        "    BATCH_SIZE = 32         # Adjust based on Colab GPU memory we try to 64 32 16\n",
         "    EPOCHS = 20             # \"How many epochs do you need?\" -> Monitor convergence\n",
         "    LR = 0.001              # Initial learning rate (tune this using Val set)\n",
         "    MOMENTUM = 0.9          # SGDM Momentum\n",
@@ -262,7 +261,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "4e41508f",
       "metadata": {
         "colab": {
@@ -588,8 +587,8 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
