使用 Colab 创建而成

--- a/dataPreprocessing.ipynb
+++ b/dataPreprocessing.ipynb
@@ -241,7 +241,7 @@
         "        # Note: DINO ViT might require specific transforms (e.g., resize to 224x224) depending on memory.\n",
         "        # Using standard CIFAR transforms here as a baseline.\n",
         "        self.transform = transforms.Compose([\n",
-        "            transforms.REsize((224,224))#We resized the CIFAR-100 images from 32x32 to 224x224.\n",
+        "            transforms.Resize((224,224)), #We resized the CIFAR-100 images from 32x32 to 224x224.\n",
         "            transforms.ToTensor(),\n",
         "            transforms.Normalize((0.5071, 0.4867, 0.4408), (0.2675, 0.2565, 0.2761))\n",
         "        ])\n",
