使用 Colab 创建而成

--- a/dataPreprocessing.ipynb
+++ b/dataPreprocessing.ipynb
@@ -21,16 +21,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NvJBelYjXwt7",
-        "outputId": "478d47c1-384f-4f7f-b74d-5c54555ad69a"
+        "outputId": "ff1050e0-3179-4732-d151-99d50b0367db"
       },
       "id": "NvJBelYjXwt7",
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ]
@@ -165,27 +165,39 @@
       "metadata": {
         "id": "-wx0VcRwZw00"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [],
       "id": "-wx0VcRwZw00"
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "c7a65502",
       "metadata": {
         "id": "c7a65502",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f2009ad8-0b94-444d-c262-11f863ecd6d6"
+        "outputId": "80b0e7bd-7ba7-4f34-df6d-77e382a270fd"
       },
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 169M/169M [00:19<00:00, 8.65MB/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Overwriting /content/drive/MyDrive/preprocessing.py\n"
+            "Generating I.I.D. partition for 100 clients...\n",
+            "Client 0 IID sample count: 450\n",
+            "Generating Non-I.I.D. partition for 100 clients with Nc=5...\n",
+            "Client 0 Non-IID sample count: 450\n",
+            "Client 0 has labels: [ 5 13 15 16 38 39]\n",
+            "Number of unique classes for Client 0: 6\n"
           ]
         }
       ],
@@ -343,11 +355,23 @@
         "\n"
       ],
       "metadata": {
-        "id": "i5Y0INkGZVHA"
+        "id": "i5Y0INkGZVHA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9c3fc86e-349a-4a4a-af98-e44d8041abf8"
       },
       "id": "i5Y0INkGZVHA",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting /content/drive/MyDrive/preprocessing.py\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
