使用 Colab 创建而成

--- a/dataPreprocessing.ipynb
+++ b/dataPreprocessing.ipynb
@@ -24,7 +24,7 @@
         "outputId": "ff1050e0-3179-4732-d151-99d50b0367db"
       },
       "id": "NvJBelYjXwt7",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -61,9 +61,12 @@
         "        # Note: DINO ViT might require specific transforms (e.g., resize to 224x224) depending on memory.\n",
         "        # Using standard CIFAR transforms here as a baseline.\n",
         "        self.transform = transforms.Compose([\n",
-        "            transforms.Resize((224, 224)),  # We resized the CIFAR-100 images from 32x32 to 224x224.\n",
-        "            transforms.ToTensor(),\n",
-        "            transforms.Normalize((0.5071, 0.4867, 0.4408), (0.2675, 0.2565, 0.2761))\n",
+        "           transforms.RandomCrop(32, padding=4),\n",
+        "           transforms.RandomHorizontalFlip(),\n",
+        "           transforms.Resize((224, 224)),\n",
+        "           transforms.ToTensor(),\n",
+        "           transforms.Normalize((0.5071, 0.4867, 0.4408),\n",
+        "                        (0.2675, 0.2565, 0.2761))\n",
         "        ])\n",
         "\n",
         "        # 2. Load original CIFAR-100 training set\n",
@@ -165,13 +168,13 @@
       "metadata": {
         "id": "-wx0VcRwZw00"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [],
       "id": "-wx0VcRwZw00"
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "c7a65502",
       "metadata": {
         "id": "c7a65502",
@@ -362,7 +365,7 @@
         "outputId": "9c3fc86e-349a-4a4a-af98-e44d8041abf8"
       },
       "id": "i5Y0INkGZVHA",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
