--- a/centralizedModel.ipynb
+++ b/centralizedModel.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "825e3347",
       "metadata": {
         "id": "825e3347",
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "0f172bdc",
       "metadata": {
         "id": "0f172bdc",
@@ -62,6 +62,18 @@
         "import matplotlib.pyplot as plt\n",
         "from tqdm import tqdm\n",
         "import torchvision.transforms as transforms\n",
+        "from torch.optim.lr_scheduler import LambdaLR\n",
+        "\n",
+        "def warmup_cosine_schedule(epoch):\n",
+        "    warmup_epochs = 5\n",
+        "    total_epochs = 50\n",
+        "    if epoch < warmup_epochs:\n",
+        "        return epoch / warmup_epochs\n",
+        "    else:\n",
+        "        progress = (epoch - warmup_epochs) / (total_epochs - warmup_epochs)\n",
+        "        return 0.5 * (1 + np.cos(np.pi * progress))\n",
+        "\n",
+        "scheduler = LambdaLR(optimizer, warmup_cosine_schedule)\n",
         "\n",
         "# Assuming FederatedDataBuilder is defined in the previous step\n",
         "# from task_3_1 import FederatedDataBuilder\n",
@@ -261,7 +273,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "4e41508f",
       "metadata": {
         "id": "4e41508f",
