使用 Colab 创建而成

--- a/centralizedModel.ipynb
+++ b/centralizedModel.ipynb
@@ -88,7 +88,8 @@
         "        # Loading from torch hub\n",
         "        print(\"Downloading/Loading DINO ViT-S/16...\")\n",
         "        self.backbone = torch.hub.load('facebookresearch/dino:main', 'dino_vits16')\n",
-        "\n",
+        "        self.dropout = nn.Dropout(0.1)\n",
+        "        self.head = nn.Linear(384, num_classes)\n",
         "        # DINO ViT-S/16 output embedding dimension is 384\n",
         "        self.embed_dim = 384\n",
         "\n",
@@ -104,8 +105,9 @@
         "    def forward(self, x):\n",
         "        # DINO forward pass returns the CLS token features\n",
         "        features = self.backbone(x)\n",
-        "        output = self.head(features)\n",
-        "        return output\n",
+        "        features = self.dropout(features)\n",
+        "        return self.head(features)\n",
+        "\n",
         "\n",
         "# ---------------------------------------------------------\n",
         "# 2. Helper Functions: Train & Evaluate\n",
