使用 Colab 创建而成

--- a/centralizedModel.ipynb
+++ b/centralizedModel.ipynb
@@ -319,12 +319,12 @@
         "              f\"Train Loss: {t_loss:.4f} Acc: {t_acc:.2f}% | \"\n",
         "              f\"Val Loss: {v_loss:.4f} Acc: {v_acc:.2f}%\")\n",
         "\n",
-        "     ========== Load Best Model for Final Test ==========\n",
+        "    # ========== Load Best Model for Final Test ==========\n",
         "    model.load_state_dict(torch.load(best_model_path))\n",
         "    test_loss, test_acc = evaluate(model, test_loader, criterion, DEVICE)\n",
         "    print(f\"\\n🎯 Final Test Accuracy: {test_acc:.2f}%\")\n",
         "\n",
-        "     ========== Plot Training Curves ==========\n",
+        "    # ========== Plot Training Curves ==========\n",
         "    plot_results(history)\n",
         "\n",
         "\n",
