使用 Colab 创建而成

--- a/fed_avg.ipynb
+++ b/fed_avg.ipynb
@@ -23,15 +23,27 @@
         "from preprocessing import FederatedDataBuilder"
       ],
       "metadata": {
-        "id": "RwWZRs5ju7iw"
+        "id": "RwWZRs5ju7iw",
+        "outputId": "8fe95a27-f55e-4df6-b59a-96af84a6c840",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "id": "RwWZRs5ju7iw",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "3d4d9643",
       "metadata": {
         "vscode": {
@@ -50,8 +62,8 @@
         "from torch.utils.data import DataLoader, Subset\n",
         "\n",
         "# 假设之前的代码保存在以下模块中 (根据你实际的文件名调整)\n",
-        "# from preprocessing import FederatedDataBuilder\n",
-        "# from centralized_model import DINOCIFAR100\n",
+        "from preprocessing import FederatedDataBuilder\n",
+        "from centralized_model import DINOCIFAR100\n",
         "\n",
         "def fed_avg_aggregate(global_model, local_weights, client_sample_counts):\n",
         "    \"\"\"\n",
@@ -256,15 +268,54 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "e8a579d7",
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
         },
-        "id": "e8a579d7"
+        "id": "e8a579d7",
+        "outputId": "739959d8-51b5-4a18-c1e0-f453b3d9c0b4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 358
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Running FedAvg | K=100, C=0.1, J=4 steps | Device: cuda\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 169M/169M [00:03<00:00, 49.4MB/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Generating I.I.D. partition for 100 clients...\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'DINOCIFAR100' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-2589386876.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"__main__\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;31m# Ensure dependencies (FederatedDataBuilder, DINOCIFAR100) are in scope\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mrun_fedavg_experiment\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/tmp/ipython-input-1862572634.py\u001b[0m in \u001b[0;36mrun_fedavg_experiment\u001b[0;34m()\u001b[0m\n\u001b[1;32m    148\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    149\u001b[0m     \u001b[0;31m# 2. Global Model Initialization\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 150\u001b[0;31m     \u001b[0mglobal_model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDINOCIFAR100\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum_classes\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDEVICE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    151\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    152\u001b[0m     \u001b[0;31m# History for plotting\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'DINOCIFAR100' is not defined"
+          ]
+        }
+      ],
       "source": [
         "if __name__ == \"__main__\":\n",
         "    # Ensure dependencies (FederatedDataBuilder, DINOCIFAR100) are in scope\n",
