--- a/taskArithmetic.ipynb
+++ b/taskArithmetic.ipynb
@@ -11,6 +11,8 @@
    },
    "outputs": [],
    "source": [
+    "%%writefile /content/drive/MyDrive/taskarithmetic.py\n",
+    "\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
