--- a/centralizedModel.ipynb
+++ b/centralizedModel.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/ILoveCoder999/FederatedLearning/blob/master/centralizedModel.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -12,22 +12,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "id": "825e3347",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "825e3347",
-        "outputId": "638929f1-6f08-4870-ed29-776877b34e6e",
+        "outputId": "23056455-69fe-49cb-ade7-26c00236d8b1",
         "vscode": {
           "languageId": "plaintext"
         }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Mounted at /content/drive\n"
           ]
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "0f172bdc",
       "metadata": {
         "id": "0f172bdc",
@@ -361,7 +361,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "4e41508f",
       "metadata": {
         "colab": {
@@ -1094,14 +1094,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "7VcN3TxW5RTk",
       "metadata": {
-        "id": "7VcN3TxW5RTk"
+        "id": "7VcN3TxW5RTk",
+        "outputId": "489a509d-fd44-4f42-f279-c8e8e135d864",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing /content/drive/MyDrive/taskarithmetic.py\n"
+          ]
+        }
+      ],
       "source": [
-        "%%writefile /content/drive/MyDrive/taskarithmetic.py\n",
+        "%%writefile /content/drive/MyDrive/dinocifar100.py\n",
         "import torch\n",
         "import torch.nn as nn\n",
         "import torch.optim as optim\n",
@@ -1409,8 +1421,8 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "A100",
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
