--- a/dataPreprocessing.ipynb
+++ b/dataPreprocessing.ipynb
@@ -199,25 +199,7 @@
         "        \n",
         "        plt.show()\n",
         "\n",
-        "\n",
-        "# Example usage\n",
-        "if __name__ == \"__main__\":\n",
-        "    # Initialize\n",
-        "    data_builder = FederatedDataBuilder(K=100)\n",
-        "    \n",
-        "    # IID partition\n",
-        "    dict_users_iid = data_builder.get_iid_partition()\n",
-        "    data_builder.verify_partition(dict_users_iid)\n",
-        "    data_builder.visualize_distribution(dict_users_iid, \n",
-        "                                       save_path='iid.png',\n",
-        "                                       title='IID')\n",
-        "    \n",
-        "    # Non-IID partition\n",
-        "    dict_users_nc5 = data_builder.get_non_iid_partition(Nc=5)\n",
-        "    data_builder.verify_partition(dict_users_nc5)\n",
-        "    data_builder.visualize_distribution(dict_users_nc5,\n",
-        "                                       save_path='non_iid_nc5.png', \n",
-        "                                       title='Non-IID (Nc=5)')"
+        "\n"
       ]
     },
     {
@@ -253,28 +235,24 @@
         }
       ],
       "source": [
+        "# test\n",
         "if __name__ == \"__main__\":\n",
-        "    # 1. Initialize Builder\n",
-        "    # Note: First run will download CIFAR-100 to ./data\n",
-        "    builder = FederatedDataBuilder(val_split_ratio=0.1, K=100)\n",
-        "\n",
-        "    # 2. Get I.I.D. partition\n",
-        "    iid_dict = builder.get_iid_partition()\n",
-        "    print(f\"Client 0 IID sample count: {len(iid_dict[0])}\")\n",
-        "\n",
-        "    # 3. Get Non-I.I.D. partition (e.g., Nc=5)\n",
-        "    # You need to test with Nc={1, 5, 10, 50}\n",
-        "    non_iid_dict = builder.get_non_iid_partition(Nc=5)\n",
-        "    print(f\"Client 0 Non-IID sample count: {len(non_iid_dict[0])}\")\n",
-        "\n",
-        "    # 4. Verification\n",
-        "    # Check if Client 0 actually has samples from approximately Nc classes\n",
-        "    client_0_indices = list(non_iid_dict[0])\n",
-        "    c0_labels = builder.train_targets[client_0_indices]\n",
-        "    unique_labels = np.unique(c0_labels)\n",
-        "\n",
-        "    print(f\"Client 0 has labels: {unique_labels}\")\n",
-        "    print(f\"Number of unique classes for Client 0: {len(unique_labels)}\")"
+        "    # Initialize\n",
+        "    data_builder = FederatedDataBuilder(K=100)\n",
+        "    \n",
+        "    # IID partition\n",
+        "    dict_users_iid = data_builder.get_iid_partition()\n",
+        "    data_builder.verify_partition(dict_users_iid)\n",
+        "    data_builder.visualize_distribution(dict_users_iid, \n",
+        "                                       save_path='iid.png',\n",
+        "                                       title='IID')\n",
+        "    \n",
+        "    # Non-IID partition\n",
+        "    dict_users_nc5 = data_builder.get_non_iid_partition(Nc=5)\n",
+        "    data_builder.verify_partition(dict_users_nc5)\n",
+        "    data_builder.visualize_distribution(dict_users_nc5,\n",
+        "                                       save_path='non_iid_nc5.png', \n",
+        "                                       title='Non-IID (Nc=5)')"
       ]
     }
   ],
