完成预处理任务

--- a/dataPreprocessing.ipynb
+++ b/dataPreprocessing.ipynb
@@ -37,13 +37,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 5,
       "id": "-wx0VcRwZw00",
       "metadata": {
-        "id": "-wx0VcRwZw00"
+        "id": "-wx0VcRwZw00",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1318fc6b-db02-4c10-d5f1-f05d2834b60a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing /content/drive/MyDrive/preprocessing.py\n"
+          ]
+        }
+      ],
       "source": [
+        "%%writefile /content/drive/MyDrive/preprocessing.py\n",
         "import torch\n",
         "import torchvision\n",
         "import torchvision.transforms as transforms\n",
